fix too much link underlining

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -78,6 +78,6 @@
   font-weight: 300;
 }
 
-p a, li a {
+p a, article li a {
   text-decoration: underline;
 }
